Prepare app for weblate

--- a/wallabag/en.lproj/Localizable.strings
+++ b/wallabag/en.lproj/Localizable.strings
@@ -1,1 +1,10 @@
 
+// Menu
+"Menu" = "Menu";
+"Entries" = "Entries";
+"Add entry" = "Add entry";
+"About" = "About";
+"Tips" = "Tips";
+"Bug report" = "Bug report";
+"Setting" = "Setting";
+"Logout" = "Logout";
