--- a/wallabag/fr.lproj/Localizable.strings
+++ b/wallabag/fr.lproj/Localizable.strings
@@ -28,5 +28,5 @@
 "Logout" = "Se déconnecter";
 "Setting" = "Paramètre";
 "Bug report" = "Rapport d'erreur";
-"Tips" = "Astuces";
+"Don" = "Don";
 "About" = "À propos";
