--- a/wallabag/en.lproj/Localizable.strings
+++ b/wallabag/en.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 "Entries" = "Entries";
 "Add entry" = "Add entry";
 "About" = "About";
-"Tips" = "Tips";
+"Don" = "Don";
 "Bug report" = "Bug report";
 "Setting" = "Setting";
 "Logout" = "Logout";
