More localized string

--- a/wallabag/en.lproj/Localizable.strings
+++ b/wallabag/en.lproj/Localizable.strings
@@ -30,3 +30,19 @@
 "Back" = "Back";
 "Add" = "Add";
 "Cancel" = "Cancel";
+
+// Search
+"Search" = "Search";
+
+// Picker
+"All" = "All";
+"Starred" = "Starred";
+"Unread" = "Unread";
+"Read" = "Read";
+
+// Entry
+"Reading time %@" = "Reading time %@";
+
+// About
+"Project page" = "Project page";
+"Made by Maxime Marinel @bourvill" = "Made by Maxime Marinel @bourvill";
