--- a/wallabag/fr.lproj/Localizable.strings
+++ b/wallabag/fr.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "Unread" = "Non lus";
 "Starred" = "Favoris";
 "Logout" = "Se déconnecter";
-"Setting" = "Paramètre";
+"Setting" = "Paramètres";
 "Bug report" = "Rapport d'erreur";
 "Don" = "Don";
 "About" = "À propos";
