--- a/wallabag/en.lproj/Localizable.strings
+++ b/wallabag/en.lproj/Localizable.strings
@@ -47,3 +47,6 @@
 // About
 "Project page" = "Project page";
 "Made by Maxime Marinel @bourvill" = "Made by Maxime Marinel @bourvill";
+
+//Player
+"Select one entry" = "Select one entry";
