--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,7 +1,5 @@
-Fix: Enhance add entry ux
-Fix: potential scroll progress reset
-Fix: Server URL with port fails syntax check
-Fix: Welcome page look ugly in dark mode
-Fix: When switching apps, wallabag scrolls up to start of section
-Add: Pull down for refresh
-Add: Add link to documentation on login page
+- Add swipe action in entries list
+- Fix reachability button in entry
+- Reading time is now based on user config
+- Fix pasteboard detection
+- Fix error during login process
