Add new sorting option on reading time

--- a/App/fr.lproj/Localizable.strings
+++ b/App/fr.lproj/Localizable.strings
@@ -50,3 +50,7 @@
 //Player
 "Select one entry" = "Sélectionnez une entrée";
 "Confirm delete?" = "Confirmer la suppression ?";
+
+"Order by id" = "Trier par id";
+"Order by reading time" = "Trier par temps de lecture";
+"Sorting" = "Tri";
