general english grammar improvements

--- a/App/en.lproj/Localizable.strings
+++ b/App/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
 "About" = "About";
 "Don" = "Donation";
 "Bug report" = "Bug report";
-"Setting" = "Setting";
+"Setting" = "Settings";
 "Logout" = "Logout";
 
 // Mode picker
